# dagex

./: Cargo.toml  README.md
.github/workflows/: rust.yml
projects/: Cargo.toml
projects/dagex/: Cargo.toml
projects/dagex/dagex_impl/: Cargo.toml
projects/dagex/dagex_impl/src/: global_id.rs  lib.rs  macro_helpers.rs
projects/dagex/dagex_impl/src/core/: directed_graph.rs  directed_graph_dto.rs  graph_id.rs  mod.rs  node.rs
projects/dagex/dagex_impl/src/impl_serde/: arrow_dto.rs  phylogenetic_network_dto.rs
projects/dagex/dagex_impl/src/phylo/: genes_over_species.rs  mod.rs  newick_parser.rs  phylogenetic_network.rs  phylogenetic_network_dto.rs  phylogenetic_network_id.rs  taxon.rs
projects/dagex/dagex_impl/src/phylo/newick_parser/: context.rs  error.rs  mod.rs  ok.rs
projects/dagex/dagex_macros/: Cargo.toml
projects/dagex/dagex_macros/src/: converter.rs  lib.rs
projects/dagex/src/: global_id.rs  hashing.rs  lib.rs
projects/dagex/src/core/: directed_graph.rs  directed_graph_dto.rs  graph_id.rs  mod.rs  node.rs
projects/dagex/src/impl_serde/: arrow_dto.rs  directed_graph_dto.rs  mod.rs  phylogenetic_network_dto.rs
projects/dagex/src/phylo/: genes_over_species.rs  mod.rs  phylogenetic_network.rs  phylogenetic_network_dto.rs  phylogenetic_network_id.rs  taxon.rs
projects/dagex/tests/: directed_graph_tests.rs  genes_over_species_tests.rs  phylogenetic_network_tests.rs  serialization_tests.rs  test_genes_over_species.rs  test_macros.rs  test_parser.rs  test_phylogenetic_network.rs  test_serialization.rs
projects/dagex_abstractions/: Cargo.toml
projects/dagex_abstractions/src/: directed_graph.rs  lib.rs  node.rs
projects/dagex_algorithms/: Cargo.toml
projects/dagex_algorithms/src/: lib.rs  logger.rs  traits.rs
projects/dagex_algorithms/src/depth/: mod.rs
projects/dagex_algorithms/src/episode_feasibility/: algorithm.rs  factory.rs  formulas.rs  input.rs  mod.rs  output.rs
projects/dagex_algorithms/tests/: depth.rs  episode_feasibility.rs  test_depth.rs  test_episode_feasibility.rs
projects/dagex_core/: Cargo.toml
projects/dagex_core/src/: directed_graph.rs  directed_graph_dto.rs  lib.rs  node.rs
projects/dagex_core_algorithms/: Cargo.toml
projects/dagex_core_algorithms/src/: lib.rs
projects/dagex_phylo/: Cargo.toml
projects/dagex_phylo/src/: genes_over_species.rs  least_common_ancestor_mapping.rs  lib.rs  phylogenetic_network.rs  phylogenetic_network_dto.rs  taxon.rs
projects/dagex_serialization/: Cargo.toml
projects/dagex_serialization/src/: deserializer_traits.rs  lib.rs  serializer_traits.rs  traits.rs  traits_deserializer.rs  traits_serializer.rs
projects/dagex_serialization/src/binary/: deserializer.rs  deserializer_helpers.rs  mod.rs  serializer.rs  serializer_helpers.rs
projects/dagex_serialization/src/binary_deserializer/: deserializer.rs  deserializer_helpers.rs  mod.rs
projects/dagex_serialization/src/binary_serializer/: mod.rs  serializer.rs  serializer_helpers.rs
projects/dagex_serialization/tests/: binary_deserializer.rs  binary_serializer.rs
projects/dagex_visualization/: Cargo.toml
projects/dagex_visualization/src/: lib.rs
projects/dagex_visualization/src/dot/: graph_model_serializer.rs  mod.rs  models.rs  serializer.rs  traits.rs
projects/dagex_visualization/tests/: dot.rs
projects/utils/array/: Cargo.toml
projects/utils/array/src/: array.rs
projects/utils/array/tests/: array.rs
projects/utils/cancellation_token/: Cargo.toml
projects/utils/cancellation_token/src/: callable.rs  callable_with_flag.rs  cancellation_token.rs  cancellation_token_inner.rs  errors.rs  lib.rs  token_state.rs
projects/utils/cancellation_token/src/pdi/: mod.rs  pdi_collection.rs  pdi_marked_vector.rs
projects/utils/cancellation_token/tests/: cancellation_token_tests.rs
projects/utils/fnv1a_hasher/: Cargo.toml
projects/utils/fnv1a_hasher/src/: init.rs
projects/utils/gvis/: Cargo.toml
projects/utils/gvis/src/: builder.rs  lib.rs
projects/utils/gvis/src/models/: arrow.rs  arrow_attribute.rs  edge.rs  edge_attribute.rs  graph.rs  graph_attribute.rs  id.rs  mod.rs  node.rs  node_attribute.rs
projects/utils/immutable_string/: Cargo.toml
projects/utils/immutable_string/src/: buffer.rs  cache.rs  fnv1_hash.rs  immutable_string.rs  impl_serde.rs  layout_helpers.rs  lib.rs  string_buffer.rs  types.rs
projects/utils/multi_valued_logic/src/tribool/: models.rs
projects/utils/multi_valued_logic/tests/: tribool.rs
projects/utils/raf_array/: Cargo.toml
projects/utils/raf_fnv1a_hasher/: Cargo.toml
projects/utils/raf_immutable_string/: Cargo.toml
projects/utils/raf_multi_valued_logic/: Cargo.toml
projects/utils/raf_structural_logging/: Cargo.toml
projects/utils/raf_structural_logging_console/: Cargo.toml
projects/utils/raf_tagged_pointer/: Cargo.toml
projects/utils/streamz/: Cargo.toml
projects/utils/streamz/src/: conv.rs  errors.rs  lib.rs  results.rs  sync_stream.rs
projects/utils/streamz/src/concrete/: defaults.rs  file_stream.rs  file_stream_builder.rs  in_memory_stream.rs  in_memory_stream_builder.rs  mod.rs
projects/utils/streamz/tests/: file_stream.rs  in_memory_stream.rs
projects/utils/structural_logging/: Cargo.toml
projects/utils/structural_logging/src/: lib.rs  models.rs  traits.rs
projects/utils/structural_logging/src/core/: background_worker.rs  core_logger.rs  core_logger_factory.rs  core_logger_factory_builder.rs  mod.rs
projects/utils/structural_logging/src/template/: models.rs  parser.rs
projects/utils/structural_logging/tests/: test_core.rs
projects/utils/structural_logging_console/: Cargo.toml
projects/utils/structural_logging_console/src/: console_write.rs  handler.rs
projects/utils/structural_logging_console/tests/: test_console_write.rs
projects/utils/tagged_pointer/: Cargo.toml
projects/utils/tagged_pointer/src/: bit.rs  macros.rs  tagged_pointer.rs
projects/utils/tagged_pointer/tests/: test_bit.rs  test_tagged_pointer.rs
