[workspace]
members = [
    "dagex",
    "dagex_algorithms",
]
resolver = "2"

[workspace.package]
version = "0.0.4"
edition = "2021"
authors = ["Rafal Szefler <rafael.szefler@gmail.com>"]
rust-version = "1.78"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.13"
rstest = "0.21"

raf_fnv1a_hasher = { git = "https://github.com/RafalSzefler/raf_utils.git" }
raf_immutable_string = { git = "https://github.com/RafalSzefler/raf_utils.git" }
raf_array = { git = "https://github.com/RafalSzefler/raf_utils.git" }
raf_structural_logging = { git = "https://github.com/RafalSzefler/raf_utils.git" }
raf_structural_logging_console = { git = "https://github.com/RafalSzefler/raf_utils.git" }
raf_multi_valued_logic = { git = "https://github.com/RafalSzefler/raf_utils.git" }
