[package]
name = "dagex"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fnv1a_hasher = { path = "../utils/fnv1a_hasher" }
immutable_string = { path = "../utils/immutable_string" }
smallvec = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
