[package]
name = "dagex"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
raf_fnv1a_hasher = { workspace = true }
raf_immutable_string = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
