[package]
name = "dagex"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
dagex_impl = { path = "dagex_impl" }
dagex_macros = { path = "dagex_macros" }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }
