[package]
name = "dagex_serialization"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
paste = "1.0.15"
itertools = { workspace = true }
array = { path = "../utils/array" }
immutable_string = { path = "../utils/immutable_string" }
dagex = { path = "../dagex" }

[dev-dependencies]
rstest = { workspace = true }
