[package]
name = "dagex_visualization"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
dagex = { path = "../dagex" }
fnv1a_hasher = { path = "../utils/fnv1a_hasher" }

[dev-dependencies]
rstest = { workspace = true }
regex = { workspace = true }