[package]
name = "dagex_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
dagex_impl = { path = "../dagex_impl" }
