[package]
name = "fnv1a_hasher"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ctor = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

[features]
default = ["use-ctor", "use-getrandom"]
use-ctor = ["dep:ctor"]
use-getrandom = ["dep:getrandom"]
