[package]
name = "immutable_string"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ctor = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true

[features]
default = ["use-ctor", "use-getrandom"]
use-ctor = ["dep:ctor"]
use-getrandom = ["dep:getrandom"]
