[package]
name = "immutable_string"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ctor = { workspace = true, optional = true }
fnv1a_hasher = { path = "../fnv1a_hasher" }

[dev-dependencies]
rand.workspace = true

[features]
default = ["ctor"]
ctor = ["dep:ctor"]
