[package]
name = "immutable_string"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fnv1a_hasher = { path = "../fnv1a_hasher" }
ctor = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["ctor", "serde"]
ctor = ["dep:ctor"]
serde = ["dep:serde"]
