[package]
name = "raf_structural_logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
raf_immutable_string = { path = "../raf_immutable_string" }
raf_fnv1a_hasher = { path = "../raf_fnv1a_hasher" }

[dev-dependencies]

[features]
