[package]
name = "raf_structural_logging_console"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
termcolor = { workspace = true }
chrono = { workspace = true }
raf_structural_logging = { path = "../raf_structural_logging" }
raf_immutable_string = { path = "../raf_immutable_string" }

[dev-dependencies]

[features]
