[package]
name = "streamz"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
cancellation_token = { path = "../cancellation_token" }
array = { path = "../array" }
immutable_string = { path = "../immutable_string" }

[dev-dependencies]
rand.workspace = true
