[package]
name = "multi_valued_logic"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde"]