[package]
name = "structural_logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
paste = { workspace = true }
immutable_string = { path = "../immutable_string" }
fnv1a_hasher = { path = "../fnv1a_hasher" }

[dev-dependencies]

[features]
